PyMaker/datas/object2/RawHTML/i16901/Python_DOC_referPages.fastcgi-wsgi-library-in-python-3.txt
<div class="post-text" itemprop="text">
<p>Does there exist any library that can serve a WSGI application as a FastCGI server, for Python 3? (So that nginx could then proxy requests to it?)</p>
<p><a href="https://docs.python.org/3/howto/webservers.html#setting-up-fastcgi">The Python 3 docs</a> mention <a href="https://pypi.python.org/pypi/flup/1.0">flup</a>, but flup doesn't even install in Python 3:</p>
<pre>
% env3/bin/pip install flup
Downloading/unpacking flup
  Downloading flup-1.0.2.tar.gz (49kB): 49kB downloaded
  Running setup.py (path:/Users/me/tmp/env3/build/flup/setup.py) egg_info for package flup
    Traceback (most recent call last):
      File "", line 17, in 
      File "/Users/me/tmp/env3/build/flup/setup.py", line 2, in 
        from ez_setup import use_setuptools
      File "./ez_setup.py", line 98
        except pkg_resources.VersionConflict, e:
                                            ^
    SyntaxError: invalid syntax
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):

  File "", line 17, in 

  File "/Users/me/tmp/env3/build/flup/setup.py", line 2, in 

    from ez_setup import use_setuptools

  File "./ez_setup.py", line 98

    except pkg_resources.VersionConflict, e:

                                        ^

SyntaxError: invalid syntax

----------------------------------------
Cleaning up...
Command python setup.py egg_info failed with error code 1 in [snip]
Storing debug log for failure in [snip]
</pre>
</div>
<div class="post-text" itemprop="text">
<p>There is now module called <code>flup6</code>. Install it using <code>pip</code></p>
<pre><code>./pip install flup6
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You can use <a href="https://pypi.python.org/pypi/flipflop">flipflop</a>. It's a simplified fork of flup (contains only the FastCGI part) and works fine with Python 3.</p>
</div>
<div class="post-text" itemprop="text">
<p>You can use <code>flup-py3</code> to solve this problem, as :</p>
<p><code>pip3 install flup-py3</code></p>
<p>You may need super user privilge to execute this command.</p>
</div>
<div class="post-text" itemprop="text">
<p>I am aware of two options</p>
<ul>
<li><a href="http://www.cherrypy.org/" rel="nofollow">CherryPy</a> - instructions <a href="https://www.digitalocean.com/community/articles/how-to-deploy-python-wsgi-applications-using-a-cherrypy-web-server-behind-nginx" rel="nofollow">for CherryPy</a> from Digital Ocean</li>
<li><a href="https://uwsgi-docs.readthedocs.org/en/latest/index.html" rel="nofollow">uWSGI</a> - instructions <a href="https://www.digitalocean.com/community/articles/how-to-deploy-python-wsgi-applications-using-uwsgi-web-server-with-nginx" rel="nofollow">for uWSGI</a> from Digital Ocean</li>
</ul>
<p>Both support Python 3 and both can create WSGI workers based on other web app code and can be served to NGINX.</p>
<p>As Graham Dumpleton mentioned, CherryPy talks to NGINX via HTTP protocol, while uWSGI talks the 'uwsgi' protocol to nginx instead of the HTTP protocol, although it does also support using HTTP as well. On the application side, both support hosting Python web applications via the WSGI API.</p>
</div>
<div class="post-text" itemprop="text">
<h1>Use <code>flipflop</code> instead</h1>
<pre><code>pip3 install --upgrade flipflop
</code></pre>
<p><a href="https://pypi.python.org/pypi/flipflop" rel="nofollow noreferrer"><code>flipflop</code></a> is what did the trick for me.
<code>flup-py3</code> has an <a href="https://github.com/Pyha/flup-py3.3/issues/2" rel="nofollow noreferrer">unresolved issue</a> which has been standing open for a couple of years now.</p>
<p>Do not forget to <a href="https://github.com/Kozea/flipflop" rel="nofollow noreferrer">edit the import line</a> in your <code>.fcgi</code> script to reflect this change towards <a href="https://github.com/Kozea/flipflop" rel="nofollow noreferrer">using <code>flipflop</code></a>.</p>
</div>
<span class="comment-copy">A very quick Google search shows this in the first half dozen results. <a href="https://github.com/Pyha/flup-py3.3" rel="nofollow noreferrer">github.com/Pyha/flup-py3.3</a></span>
<span class="comment-copy">Found another one. It seems the original author Allan Saddi contributes significantly to it: <a href="http://hg.saddi.com/flup-py3.0/" rel="nofollow noreferrer">hg.saddi.com/flup-py3.0</a></span>
<span class="comment-copy">@Nayuki Yes indeed, <code>flup-py3</code> has an <a href="https://github.com/Pyha/flup-py3.3/issues/2" rel="nofollow noreferrer">unresolved issue</a> which has been standing open for a couple of years now. In <a href="https://pypi.python.org/pypi/flipflop" rel="nofollow noreferrer"><code>flipflop</code></a>, the great work of Allan Saddi was further simplified.</span>
<span class="comment-copy">TypeError: sequence item 0: expected bytes, bytearray, or an object with the buffer interface, str found  it not works with django 1.8 python 3.4</span>
<span class="comment-copy">It looks like <code>flup6</code> is the only working <code>flup</code> replacement for Python 3. Tried <code>flup-py3</code> and <code>flipflop</code> on Python 3.5.</span>
<span class="comment-copy">@quasiyoke flipflop will not work in windows, as 'fcntl' can not work in windows.</span>
<span class="comment-copy">Came across this on Google; this was exactly what I was looking for. Documentation is sparse, but the example on wikipedia is enough:  <a href="http://en.wikipedia.org/wiki/Web_Server_Gateway_Interface#Example_application" rel="nofollow noreferrer">en.wikipedia.org/wiki/…</a></span>
<span class="comment-copy">For django, the fcgi on hostmonster.com asks for flup and pip could not able to install it.</span>
<span class="comment-copy">CherryPy relies on HTTP proxying. uWSGI would be a better choice of the two for nginx as recent nginx versions have support for uWSGI's custom protocol built in.</span>
<span class="comment-copy">@GrahamDumpleton Good point, reviewed some descriptions, learned from your comment and updated my answer. I hope I understood your comment and linked descriptions correctly.</span>
